SET(STM32_CHIP STM32F072x8)
SET(CHIBIOS_ROOT ${CMAKE_SOURCE_DIR}/../../ChibiOS)

CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(dongle-ping-pong)

ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(ChibiOS 16 COMPONENTS rt hal ext gpt pal serial serial_usb spi st usb REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${ChibiOS_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}/../board
)

ADD_DEFINITIONS(-DCORTEX_USE_FPU=FALSE)

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

SET(SOURCE_FILES 
    main.c 
    ${CMAKE_SOURCE_DIR}/../board/board.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${SOURCE_FILES}  ${ChibiOS_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME}.elf)
