SET(STM32_CHIP STM32F072x8)
SET(CHIBIOS_ROOT ${CMAKE_SOURCE_DIR}/../../ChibiOS)

CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(dongle-ping-pong)

ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(ChibiOS 16 COMPONENTS rt hal ext gpt pal serial serial_usb spi st usb REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${ChibiOS_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}/../board
    ${CMAKE_SOURCE_DIR}/../../6LoWPAN
    ${CMAKE_SOURCE_DIR}/../../PHY
)

ADD_DEFINITIONS(-DCORTEX_USE_FPU=FALSE)

SET(STM32_LINKER_SCRIPT ${ChibiOS_LINKER_SCRIPT})

SET(HEADER_FILES
    ${CMAKE_SOURCE_DIR}/../../PHY/cc2520_reg.h
    ${CMAKE_SOURCE_DIR}/../../PHY/cc2520.h
    ${CMAKE_SOURCE_DIR}/../../6LoWPAN/mac802.14.5.h
    chconf.h
    halconf.h
    mcuconf.h
)

SET(SOURCE_FILES 
    ${CMAKE_SOURCE_DIR}/../../PHY/cc2520.c
    ${CMAKE_SOURCE_DIR}/../../6LoWPAN/mac802.14.5.c
    ${CMAKE_SOURCE_DIR}/../board/board.c
    main.c 
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${SOURCE_FILES} ${HEADER_FILES} ${ChibiOS_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME}.elf)
